retrieveUnpackaged/objects/Reviewer_Pool__c.object
<CustomObject>
    <fields>
        <fullName>Expert_Reviewer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert Reviewer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Expert Reviewer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviewer Pools</relationshipLabel>
        <relationshipName>Reviewer_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFA Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Reviewer Pools</relationshipLabel>
        <relationshipName>Reviewer_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available with Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible – COI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Account_Id__c</fullName>
        <formula>Expert_Reviewer_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Account Id</label>
        <type>Text</type>
    </fields>
    <label>Reviewer Pool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Expert_Reviewer_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Reviewer Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>